--- a/data/cards/14934922.yaml
+++ b/data/cards/14934922.yaml
@@ -143,6 +143,10 @@ sets:
     set_name: Advanced Event Pack 2023 Vol.2 Version 1
     rarities:
     - Common
+  - set_number: AE19-KRS20
+    set_name: Advanced Event Pack 2023 Vol.2 Version 2
+    rarities:
+    - Common
   zh-CN:
   - set_number: SD35-SC032
     set_name: 'Structure Deck: Soulburner'
