--- a/data/cards/55990317.yaml
+++ b/data/cards/55990317.yaml
@@ -116,6 +116,10 @@ sets:
     set_name: Advanced Event Pack 2023 Vol.2 Version 1
     rarities:
     - Common
+  - set_number: AE19-KRS14
+    set_name: Advanced Event Pack 2023 Vol.2 Version 2
+    rarities:
+    - Common
   zh-CN:
   - set_number: DBTM-SC037
     set_name: 'Deck Build Pack: Tactical Masters'
