--- a/data/cards/69811710.yaml
+++ b/data/cards/69811710.yaml
@@ -102,6 +102,10 @@ sets:
     set_name: Eternity Code
     rarities:
     - Rare
+  - set_number: AE19-KRS02
+    set_name: Advanced Event Pack 2023 Vol.2 Version 2
+    rarities:
+    - Secret Rare
   zh-CN:
   - set_number: MGP4-SC118
     set_name: Mega Pack 04
