--- a/data/cards/92562411.yaml
+++ b/data/cards/92562411.yaml
@@ -77,6 +77,10 @@ sets:
     set_name: Chaos Impact
     rarities:
     - Common
+  - set_number: AE19-KRS03
+    set_name: Advanced Event Pack 2023 Vol.2 Version 2
+    rarities:
+    - Secret Rare
   zh-CN:
   - set_number: MGP4-SC035
     set_name: Mega Pack 04
