--- a/data/cards/12289247.yaml
+++ b/data/cards/12289247.yaml
@@ -149,6 +149,10 @@ sets:
     set_name: Advanced Event Pack 2023 Vol.2 Version 1
     rarities:
     - Common
+  - set_number: AE19-KRS17
+    set_name: Advanced Event Pack 2023 Vol.2 Version 2
+    rarities:
+    - Common
   zh-CN:
   - set_number: SD29-SC042
     set_name: 'Structure Deck: Master of Pendulum'
