--- a/data/cards/17330916.yaml
+++ b/data/cards/17330916.yaml
@@ -127,6 +127,10 @@ sets:
     set_name: Advanced Event Pack 2023 Vol.2 Version 1
     rarities:
     - Super Rare
+  - set_number: AE19-KRS11
+    set_name: Advanced Event Pack 2023 Vol.2 Version 2
+    rarities:
+    - Super Rare
   zh-CN:
   - set_number: 23RC-SC011
     set_name: Rarity Collection Quarter Century Edition
