--- a/data/cards/18205590.yaml
+++ b/data/cards/18205590.yaml
@@ -105,6 +105,10 @@ sets:
     set_name: Advanced Event Pack 2023 Vol.2 Version 1
     rarities:
     - Common
+  - set_number: AE19-KRS18
+    set_name: Advanced Event Pack 2023 Vol.2 Version 2
+    rarities:
+    - Common
   zh-CN:
   - set_number: CL04-SC186
     set_name: Classic Pack 04
