--- a/data/cards/18326736.yaml
+++ b/data/cards/18326736.yaml
@@ -140,6 +140,10 @@ sets:
     set_name: Advanced Event Pack 2023 Vol.2 Version 1
     rarities:
     - Common
+  - set_number: AE19-KRS16
+    set_name: Advanced Event Pack 2023 Vol.2 Version 2
+    rarities:
+    - Common
   zh-CN:
   - set_number: CL04-SC183
     set_name: Classic Pack 04
