--- a/data/cards/23232295.yaml
+++ b/data/cards/23232295.yaml
@@ -147,6 +147,10 @@ sets:
     set_name: Advanced Event Pack 2023 Vol.2 Version 1
     rarities:
     - Super Rare
+  - set_number: AE19-KRS10
+    set_name: Advanced Event Pack 2023 Vol.2 Version 2
+    rarities:
+    - Super Rare
   zh-TW:
   - set_number: LTGY-TC050
     set_name: Lord of the Tachyon Galaxy
