--- a/data/cards/24050692.yaml
+++ b/data/cards/24050692.yaml
@@ -105,6 +105,10 @@ sets:
     set_name: Advanced Event Pack 2023 Vol.2 Version 1
     rarities:
     - Common
+  - set_number: AE19-KRS19
+    set_name: Advanced Event Pack 2023 Vol.2 Version 2
+    rarities:
+    - Common
   zh-CN:
   - set_number: DBAG-SC010
     set_name: 'Deck Build Pack: Ancient Guardians'
