--- a/data/cards/29765339.yaml
+++ b/data/cards/29765339.yaml
@@ -101,6 +101,10 @@ sets:
     set_name: Advanced Event Pack 2023 Vol.2 Version 1
     rarities:
     - Common
+  - set_number: AE19-KRS15
+    set_name: Advanced Event Pack 2023 Vol.2 Version 2
+    rarities:
+    - Common
   zh-CN:
   - set_number: AGOV-SC106
     set_name: Age of Overlord
