--- a/data/cards/30243636.yaml
+++ b/data/cards/30243636.yaml
@@ -151,6 +151,10 @@ sets:
     set_name: Advanced Event Pack 2023 Vol.2 Version 1
     rarities:
     - Super Rare
+  - set_number: AE19-KRS06
+    set_name: Advanced Event Pack 2023 Vol.2 Version 2
+    rarities:
+    - Super Rare
   zh-CN:
   - set_number: 23SP-SC316
     set_name: Entry Pack 2023 Vol.3
