--- a/data/cards/42052439.yaml
+++ b/data/cards/42052439.yaml
@@ -87,6 +87,10 @@ sets:
     set_name: Advanced Event Pack 2023 Vol.2 Version 1
     rarities:
     - Super Rare
+  - set_number: AE19-KRS08
+    set_name: Advanced Event Pack 2023 Vol.2 Version 2
+    rarities:
+    - Super Rare
   zh-CN:
   - set_number: DBAD-SC051
     set_name: 'Deck Build Pack: Amazing Defenders'
