--- a/data/cards/44487250.yaml
+++ b/data/cards/44487250.yaml
@@ -105,6 +105,10 @@ sets:
     set_name: Advanced Event Pack 2023 Vol.2 Version 1
     rarities:
     - Super Rare
+  - set_number: AE19-KRS12
+    set_name: Advanced Event Pack 2023 Vol.2 Version 2
+    rarities:
+    - Super Rare
   zh-TW:
   - set_number: LTGY-TC072
     set_name: Lord of the Tachyon Galaxy
