--- a/data/cards/53262004.yaml
+++ b/data/cards/53262004.yaml
@@ -170,6 +170,10 @@ sets:
     set_name: Advanced Event Pack 2023 Vol.2 Version 1
     rarities:
     - Super Rare
+  - set_number: AE19-KRS07
+    set_name: Advanced Event Pack 2023 Vol.2 Version 2
+    rarities:
+    - Super Rare
   zh-CN:
   - set_number: SD29-SC045
     set_name: 'Structure Deck: Master of Pendulum'
