--- a/data/cards/67113830.yaml
+++ b/data/cards/67113830.yaml
@@ -84,6 +84,10 @@ sets:
     set_name: Advanced Event Pack 2023 Vol.2 Version 1
     rarities:
     - Common
+  - set_number: AE19-KRS21
+    set_name: Advanced Event Pack 2023 Vol.2 Version 2
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
