--- a/data/cards/90846359.yaml
+++ b/data/cards/90846359.yaml
@@ -182,6 +182,10 @@ sets:
     set_name: Advanced Event Pack 2023 Vol.2 Version 1
     rarities:
     - Super Rare
+  - set_number: AE19-KRS13
+    set_name: Advanced Event Pack 2023 Vol.2 Version 2
+    rarities:
+    - Super Rare
   zh-CN:
   - set_number: ST21-SCP20
     set_name: Starter Deck 2021 Special Pack
