--- a/data/cards/92919429.yaml
+++ b/data/cards/92919429.yaml
@@ -102,6 +102,10 @@ sets:
     rarities:
     - Normal Parallel Rare
     - Super Rare
+  - set_number: AE19-KRS01
+    set_name: Advanced Event Pack 2023 Vol.2 Version 2
+    rarities:
+    - Secret Rare
   zh-CN:
   - set_number: CL04-SC102
     set_name: Classic Pack 04
