--- a/data/rush/18257.yaml
+++ b/data/rush/18257.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add Level 4 or lower monsters from your opponent's Graveyard to their hand, up to [the number of face-up monsters on your opponent's field]. Then, this card gains ATK equal to [the total number of cards in both players' hands] x 100 until the end of this turn.
+    Add Level 4 or lower monsters from your opponent's Graveyard to their hand, up to [the number of face-up monsters on their field]. Then, this card gains ATK equal to [the total number of cards in both players' hands] x 100 until the end of this turn.
   de:
   es:
   fr:
