--- a/data/rush/18787.yaml
+++ b/data/rush/18787.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When an opponent's monster declares an attack while your opponent has 3 Attack Position monsters on their field.
+    When an opponent's monster declares an attack while they have 3 Attack Position monsters on their field.
   de:
   es:
   fr:
