--- a/data/rush/17594.yaml
+++ b/data/rush/17594.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent Normal Summons a Level 5 or higher monster while your LP are lower than your opponent's.
+    When your opponent Normal Summons a Level 5 or higher monster while your LP are lower than theirs.
   de:
   es:
   fr:
