--- a/data/rush/18286.yaml
+++ b/data/rush/18286.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Look at up to 2 face-down Spell/Trap Cards on your opponent's field, and destroy 1 of them. Then, if you have "CAN:D" face-up on your field, you can gain 1000 LP.
+    Look at up to 2 face-down Spell/Trap Cards on your opponent's field, then return them to their original positions, and destroy 1 of them. Then, if you have "CAN:D" face-up on your field, you can gain 1000 LP.
   de:
   es:
   fr:
