--- a/data/rush/18945.yaml
+++ b/data/rush/18945.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Look at 1 face-down Spell/Trap Card on your opponent's field. Then, if it is a Spell Card, you can destroy it.
+    Look at 1 face-down Spell/Trap Card on your opponent's field, then return it to its original position. Then, if it was a Spell Card, you can destroy it.
   de:
   es:
   fr:
