--- a/rush.yaml
+++ b/rush.yaml
@@ -49983,7 +49983,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Look at 1 face-down Spell/Trap Card on your opponent's field. Then, if your opponent has a card with the same name as it in their Graveyard, you can destroy that card.
+    Look at 1 face-down Spell/Trap Card on your opponent's field, then return it to its original position. Then, if your opponent has a card with the same name as it in their Graveyard, you can destroy that card.
   de:
   es:
   fr:
@@ -50136,7 +50136,7 @@ effect_types:
 effect:
   en: |-
     ● This card gains ATK equal to [the number of monsters on the field] x 300 until the end of this turn.
-    ● Look at all face-down Spell/Trap Cards on your opponent's field, and destroy 1 of them.
+    ● Look at all face-down Spell/Trap Cards on your opponent's field, then return them to their original positions, and destroy 1 of them.
   de:
   es:
   fr:
@@ -67313,7 +67313,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent Normal Summons a Level 5 or higher monster while your LP are lower than your opponent's.
+    When your opponent Normal Summons a Level 5 or higher monster while your LP are lower than theirs.
   de:
   es:
   fr:
@@ -81636,7 +81636,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Change 1 face-down monster on your opponent's field to face-up Defense Position. Then, inflict damage to your opponent equal to [its original ATK].
+    Change 1 face-down monster on your opponent's field to face-up Defense Position. Then, inflict damage to your opponent equal to [that monster's original ATK].
   de:
   es:
   fr:
@@ -82426,7 +82426,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add Level 4 or lower monsters from your opponent's Graveyard to their hand, up to [the number of face-up monsters on your opponent's field]. Then, this card gains ATK equal to [the total number of cards in both players' hands] x 100 until the end of this turn.
+    Add Level 4 or lower monsters from your opponent's Graveyard to their hand, up to [the number of face-up monsters on their field]. Then, this card gains ATK equal to [the total number of cards in both players' hands] x 100 until the end of this turn.
   de:
   es:
   fr:
@@ -84432,7 +84432,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Look at up to 2 face-down Spell/Trap Cards on your opponent's field, and destroy 1 of them. Then, if you have "CAN:D" face-up on your field, you can gain 1000 LP.
+    Look at up to 2 face-down Spell/Trap Cards on your opponent's field, then return them to their original positions, and destroy 1 of them. Then, if you have "CAN:D" face-up on your field, you can gain 1000 LP.
   de:
   es:
   fr:
@@ -101175,7 +101175,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Look at 1 face-down monster on your opponent's field. Then, if your opponent has a monster with the same DEF as its original DEF in their Graveyard, you can destroy that monster.
+    Look at 1 face-down monster on your opponent's field, then return it to its original position. Then, if your opponent has a monster with the same DEF as its original DEF in their Graveyard, you can destroy that monster.
   de:
   es:
   fr:
@@ -101842,7 +101842,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When an opponent's monster declares an attack while your opponent has 3 Attack Position monsters on their field.
+    When an opponent's monster declares an attack while they have 3 Attack Position monsters on their field.
   de:
   es:
   fr:
@@ -103363,7 +103363,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Look at 1 face-down Spell/Trap Card on your opponent's field. Then, if it is a Spell Card, you can destroy it.
+    Look at 1 face-down Spell/Trap Card on your opponent's field, then return it to its original position. Then, if it was a Spell Card, you can destroy it.
   de:
   es:
   fr:
@@ -106731,7 +106731,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent Special Summons a monster(s) while you have a Level 6 or higher Spellcaster Type monster on your field equipped with an Equip Spell Card.
+    When your opponent Special Summons a monster(s) while you have a Level 6 or higher Spellcaster Type monster equipped with an Equip Spell Card on your field.
   de:
   es:
   fr:
@@ -113259,7 +113259,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Look at 1 face-down card on your opponent's field. Then, if it is a Monster Card with 1500 or more DEF, you can destroy it.
+    Look at 1 face-down card on your opponent's field, then return it to its original position. Then, if it was a Monster Card with 1500 or more DEF, you can destroy it.
   de:
   es:
   fr:
@@ -119135,7 +119135,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top 2 cards of your Deck to the Graveyard. Then, if you have "Vi-FRND" face-up on your field, you can look at up to 2 face-down cards on your opponent's field.
+    Send the top 2 cards of your Deck to the Graveyard. Then, if you have "Vi-FRND" face-up on your field, you can look at up to 2 face-down cards on your opponent's field, then return them to their original positions.
   de:
   es:
   fr:
@@ -122654,7 +122654,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up Effect Monster on your opponent's field with 100 or more original ATK loses ATK equal to [its original ATK] until the end of this turn. Then, you can negate its Continuous Effects until the end of this turn.
+    1 face-up Effect Monster on your opponent's field with 100 or more original ATK loses ATK equal to [its original ATK] until the end of this turn. Then, you can negate that monster's Continuous Effects until the end of this turn.
   de:
   es:
   fr:
