--- a/rush.yaml
+++ b/rush.yaml
@@ -51523,6 +51523,11 @@ sets:
     set_name: 'Deck Mod Pack: Chaotic Omega Rising!!'
     rarities:
     - Ultra Rare
+  - set_number: RD/HC01-JP057
+    set_name: High-Grade Collection
+    rarities:
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: RD/KP07-KR053
     set_name: 'Deck Mod Pack: Chaotic Omega Rising!!'
