--- a/data/cards/34225426.yaml
+++ b/data/cards/34225426.yaml
@@ -41,7 +41,7 @@ series:
 images:
 - index: 1
   image: TearlamentsPerlegia-PHHY-JP-R.png
-  illustration: TearlamentsPerlegia-OW.png
+  illustration: TearlamentsPerlegia-MADU-JP-VG-artwork.png
 - index: '1.1'
   image: TearlamentsPerlegia-PHHY-EN-C-1E.png
   illustration: TearlamentsPerlegia-MADU-EN-VG-artwork.png
