Add "Fire King Consort Ulkanix"

--- a/src/assignments/assignments.yaml
+++ b/src/assignments/assignments.yaml
@@ -25,6 +25,9 @@
 - yugipedia: 10276
   fake_password: 10000100
 ## Prereleases
+# Fire King Consort Ulkanix
+- yugipedia: 1033044
+  fake_password: 100295801
 # Phantom Nightmare
 - set_abbreviation: PHNI
   fake_password_range:
